GNOME Bugzilla – Bug 582306
Cannot eject DVD
Last modified: 2010-04-08 10:25:36 UTC
The Eject menu item is grayed out when a DVD is inserted.
Is the DVD playing?
Well, "playing" the menu. I also tried pausing (there is no "stop"), no difference.
commit c2ca1cb46e8f72c5bd483ff013d034f9874d6a02 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Apr 8 11:19:43 2010 +0100 Fix Eject menu item not being available for DVDs g_file_find_enclosing_mount() on the root directory for the disc would find the root mount, instead of the DVD mount, and, when playing the DVD from the menu, the device node path is used instead the mount's path. https://bugzilla.gnome.org/show_bug.cgi?id=582306
*** Bug 609298 has been marked as a duplicate of this bug. ***