Fix Eject menu item not being available for DVDs

g_file_find_enclosing_mount() on the root directory for the disc
would find the root mount, instead of the DVD mount, and, when
playing the DVD from the menu, the device node path is used
instead the mount's path.

https://bugzilla.gnome.org/show_bug.cgi?id=582306